--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Data Source Properties
 spring.datasource.driverClassName = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/imperia
+spring.datasource.url = jdbc:postgresql://localhost:5432/hotel
 spring.datasource.username = postgres
-spring.datasource.password = password
+spring.datasource.password = admin
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -16,4 +16,3 @@ logging.level.blog = WARN
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor = TRACE
-
