--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Data Source Properties
 spring.datasource.driverClassName = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/hotel_management
+spring.datasource.url = jdbc:postgresql://localhost:5432/hotel
 spring.datasource.username = postgres
 spring.datasource.password = admin
 
